<resources>
    <string name="app_name">Grocery</string>
    <string name="appName">grocr</string>
    <string name="appName1">grocery dashbroad</string>
    <string name="sign_in">sign in</string>
    <string name="dashbroad">Grocr Dashbroad</string>
    <string name="topstar">Topstar grocery</string>
    <string name="today">Today</string>
    <string name="week">This week</string>
    <string name="week_inf">AED: 4800.00</string>
    <string name="month">This month</string>
    <string name="month_inf">AED: 16000.00</string>
    <string name="year">This year</string>
    <string name="year_inf">AED: 360000.00</string>
    <string name="orders">New Orders</string>
    <string name="going_orders">On going Orders</string>
    <string name="delivered_orders">Delivered Orders</string>
    <string name="Canceled_Order">Canceled Orders</string>
    <string name="order_cancelled">Order Cancelled</string>
    <string name="today_orders">Today\'s total orders</string>
    <string name="all_users">All users</string>
    <string name="menu">Menu</string>
    <string name="AED">AED:0000000000</string>
    <string name="buikOrder">Bulk orders</string>
    <string name="live_cus">Live Customers</string>
    <string name="closeShop">Close Shop</string>
    <string name="questions_close">Are you sure you want to close your shop?</string>
    <string name="open_again_shop">Your shop is closed now</string>
    <string name="please_switch_on"> please switch on to open Shop</string>
    <string name="menuBulkOrder">Bulk Order Settings</string>
    <string name="enter_boy_name">Enter Delivery Boy Name</string>
    <string name="delivery_boy_name">Delivery Boy Name</string>
    <string name="menu_add_delivery_boy">Add Delivery Boy</string>
    <string name="tb_ID">ID</string>
    <string name="tb_Brand_name">Brand Name</string>
    <string name="tb_remove">Remove from list</string>
    <string name="tb_delete_all">Delete All</string>
    <string name="delete">Delete</string>
    <string name="select_Area">Select Area</string>
    <string name="select_Building">Select Building</string>
    <string name="enter_building_name">Enter Building Name</string>
    <string name="add_Building_Area">Add to list</string>
    <string name="tb_Area">Area</string>
    <string name="tb_building">Building</string>
    <string name="tb_Status">Status</string>
    <string name="please_specify">Please Speciy</string>
    <string name="also_recive">Also receive order for items not in the grocery inventory</string>
    <string name="only_recive">Only receive order for items in the grocery</string>
    <string name="menu_Add_delivery_timing">Delivery Timing</string>
    <string name="menu_add_building">Add Building/ Area</string>
    <string name="menu_bulk_orders">Bulk Order Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_Contact_Details">Contact Details</string>
    <string name="menu_About_Groccery">About Grocery</string>
    <string name="menu_Add_Product">Add Product</string>
    <string name="shop_timing">Shop Timing</string>
    <string name="sunday">Sunday</string>
    <string name="Notifica">Notifications</string>
    <string name="fiter">Filter By</string>
    <string name="bulk_orers">Bulk</string>
    <string name="Time_left">Time left</string>
    <string name="tipe">Tipe</string>
    <string name="order_Id">Order ID</string>
    <string name="falt_no">Falt No.</string>
    <string name="falt_or_villa_no">Falt/Villa No</string>
    <string name="buildin_name">Building Name</string>
    <string name="time_orders">Order Time</string>
    <string name="romaining_time">Romaining Time</string>
    <string name="remaining_time">Remaining Time</string>
    <string name="delivery_before">Delivery Before</string>
    <string name="deliver_before">Deliver Before</string>
    <string name="Customer_name">Customer Name</string>
    <string name="Amount">Amount</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thusday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="we_will">We will deliver the order in</string>
    <string name="minutes">Minutes</string>
    <string name="order_despatching">Order Despatching Timing</string>
    <string name="five_min">5 Min</string>
    <string name="ten_min">10 Min</string>
    <string name="fif_min">15 Min</string>
    <string name="view">View</string>
    <string name="status">Status</string>
    <string name="click_change">Click to change status</string>
    <string name="in_progress">in Progress</string>
    <string name="delivery">Delivery</string>
    <string name="despatch">Despatch</string>
    <string name="delived_time">Delivered Time</string>
    <string name="order_time">Order Time</string>
    <string name="delivered_by">Delivered By</string>
    <string name="resesion">Resesion</string>
    <string name="cant_be_delivery">Can\'t be Delivery in time</string>
    <string name="manage_category">Manage Category</string>
    <string name="manage_sut">Manage Sub Category</string>
    <string name="manage_brands">Manage Brands</string>
    <string name="manage_products">Manage Products</string>
    <string name="selected">Selected</string>
    <string name="All_products">All Products</string>
    <string name="my_stock">My Stock</string>
    <string name="manage_offers">Manager Offers</string>
    <string name="stock_notifictaions">Stock Notifictaions</string>
    <string name="choose_category">Choose Category</string>
    <string name="choose_Sub_category">Choose Sub Category</string>
    <string name="choose_brand">Choose Brand</string>
    <string name="products_name">Product Name</string>
    <string name="search">Search</string>
    <string name="QTE">QTY:</string>
    <string name="update_stock">Update Stock</string>
    <string name="add_products">Add Products</string>
    <string name="remove_product">Remove Products</string>
    <string name="update_products">Update Product Infor</string>
    <string name="live_customer">Live Customer</string>
    <string name="regular_customer">Regular Customer</string>
    <string name="category">Category</string>
    <string name="product_id">Products ID</string>
    <string name="price">Price</string>
    <string name="offers_price">Offers price</string>
    <string name="tb_delete_all_offers">Delete All Offers</string>
    <string name="product">Product</string>
    <string name="enter_product">Enter Products Name</string>
    <string name="enter_customer_name">Enter Customer Name</string>
    <string name="flat_number">Flat Number</string>
    <string name="enter_flat_number">Enter Flat Number</string>
    <string name="belance_credit">Belance Edit</string>
    <string name="manage_your_offers">Manage Your Offers</string>
    <string name="add_category">Add Category</string>
    <string name="remove_category">Remove Category</string>
    <string name="suggest_category">Suggest Category</string>
    <string name="select_categorles">Select categorles to your list</string>
    <string name="sort">Sort</string>
    <string name="search_sub">Search Sub Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="add_to_your_list">Add to your list</string>
    <string name="suggest_brand">Suggest A Brand</string>
    <string name="enter_brand_name">Enter Brand Name</string>
    <string name="suggest_brand_2">Suggest Brand</string>
    <string name="brand_name">Brand Name</string>
    <string name="suggest_a_product">Suggest A Product</string>
    <string name="suggest_product">Suggest Products</string>
    <string name="home">Home</string>
    <string name="normal">Normal</string>
    <string name="schedule">Schedule</string>
    <string name="pick_up">Pick up</string>
    <string name="tips">Tips</string>
    <string name="preparing_orders">Preparing Orders</string>
    <string name="despatched_orders">Despatched Orders</string>
    <string name="manage_reward_point">Manager Reward Point</string>
    <string name="missed_sales">Missed Sales</string>
    <string name="promotions">Promotions</string>
    <string name="expiring">Expiring</string>
    <string name="schedule_orders">Schedule Orders</string>
    <string name="bulk">Bulk Orders</string>
    <string name="settings">Settings</string>
    <string name="total_reward">Total Reward point:</string>
    <string name="grocery_name">Grocery Name</string>
    <string name="top_start">Top Star</string>
    <string name="select_city">Select City</string>
    <string name="select_country">Select Country</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_mobile_number">Enter mobile Number</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="email_id">Email ID</string>
    <string name="enter_web">Enter Website</string>
    <string name="choose_current">Choose Current Location</string>
    <string name="select_on_map">Select On Map</string>
    <string name="map_view">Map View</string>
    <string name="addRemove_category">Add/Remove Category</string>
    <string name="add">Added</string>
    <string name="not_add">Not Add</string>
    <string name="category_update">Categories Update</string>
    <string name="save">Save</string>
    <string name="no">No</string>
    <string name="date_time">Date Time</string>
    <string name="current_status">Current status</string>
    <string name="delivery_boy">Delivery Boy</string>
    <string name="search_brand">Search A Brand</string>
    <string name="product_are_only">Products are only displayed from selected categories and sub categories by you</string>
    <string name="addRemove_products">Add/Remove products</string>
    <string name="highest_moving">Hightest Moving Item</string>
    <string name="stock_avaiable">Stock Available</string>
    <string name="out_of_stock">Out Of Stock</string>
    <string name="l_usine">L\'usine Siliced Brown Bread</string>
    <string name="sliced_brown">Sliced brown bread</string>
    <string name="combo_offer">Combo Offer</string>
    <string name="regular_offer">Regular Offer</string>
    <string name="reward_points_settings">Reward Points Settings</string>
    <string name="enable_points">Enable Points and Rewards</string>
    <string name="conversion">Conversion rate for points earned</string>
    <string name="points">Points</string>
    <string name="forP">for</string>
    <string name="AED2">AED</string>
    <string name="customer_can">Customers can redeem</string>
    <string name="creat_combo">Creat a Combo Offer</string>
    <string name="view_combo">View Combo Offer</string>
    <string name="original_price">Original Price</string>
    <string name="enter_product_and">Product &amp; Offer</string>
    <string name="enter_description">Enter Description</string>
    <string name="orders_history">Order History</string>
    <string name="user_purchase">User Purchase Analytics</string>
    <string name="from_date">From Date:</string>
    <string name="canceled">Cancel</string>
    <string name="edit">Edit</string>
    <string name="active">Actice</string>
    <string name="aed">AED:</string>
    <string name="missing_product">Missing Products</string>
    <string name="sl_no">Sl.No</string>
    <string name="gift_item">Gift Item</string>
    <string name="value">Value</string>
    <string name="min_amount">Min.Amount</string>
    <string name="promocode">Promocode</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="message_confirm_delete_delivery_boy_1">Are you sure you want to delete the delivery boy?</string>
    <string name="message_confirm_delete_delivery_boy_2">You will loose all order history</string>
</resources>