<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_dialog"
    android:gravity="center"
    android:orientation="vertical">

    <com.grocery.common.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorApp"
        android:textSize="@dimen/size_text_36" />

    <com.grocery.common.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/size_text_30"
        android:text="@string/message_confirm_delete_delivery_boy_1"
        android:textColor="#fff"
        android:textSize="@dimen/size_text_30" />

    <com.grocery.common.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/message_confirm_delete_delivery_boy_2"
        android:textColor="#fff"
        android:textSize="@dimen/size_text_30" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:layout_marginTop="@dimen/size_text_30"
        android:orientation="horizontal">

        <com.grocery.common.CustomTextView
            android:id="@+id/btn_cancel"
            android:layout_width="@dimen/size200"
            android:layout_height="@dimen/size50"
            android:layout_marginRight="@dimen/size10"
            android:background="@drawable/btn_no"
            android:gravity="center"
            android:text="@string/canceled"
            android:textColor="#fff"
            android:textSize="@dimen/size_text_21"
            android:textStyle="bold" />

        <com.grocery.common.CustomTextView
            android:id="@+id/btn_delete"
            android:layout_width="@dimen/size200"
            android:layout_height="@dimen/size50"
            android:layout_marginLeft="@dimen/size10"
            android:background="@drawable/btn_yes"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="#fff"
            android:textSize="@dimen/size_text_21"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>