<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="@color/back_list"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/size1"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <com.grocery.common.CustomTextView
            android:id="@+id/tvId"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:ellipsize="marquee"
            android:gravity="center|left"
            android:paddingLeft="@dimen/size10"
            android:singleLine="true"
            android:text="@string/order_Id"
            android:textColor="@color/text_spiner"
            android:textSize="@dimen/size_text_15" />

        <com.grocery.common.CustomTextviewBold
            android:id="@+id/tvFlat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:gravity="center|left"
            android:paddingBottom="@dimen/size5"
            android:paddingLeft="@dimen/size10"
            android:singleLine="true"
            android:text="@string/falt_no"
            android:textColor="@color/text_spiner"
            android:textSize="@dimen/size_text_15" />

        <com.grocery.common.CustomTextView
            android:id="@+id/tvBuildingName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:ellipsize="marquee"
            android:gravity="center|left"
            android:paddingLeft="@dimen/size10"
            android:singleLine="true"
            android:text="@string/buildin_name"
            android:textColor="@color/text_spiner"
            android:textSize="@dimen/size_text_15" />

        <com.grocery.common.CustomTextView
            android:id="@+id/tvCustomName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:ellipsize="marquee"
            android:gravity="center|left"
            android:paddingLeft="@dimen/size10"
            android:singleLine="true"
            android:text="@string/Customer_name"
            android:textColor="@color/text_spiner"
            android:textSize="@dimen/size_text_15" />

        <com.grocery.common.CustomTextviewBold
            android:id="@+id/tvAed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ellipsize="marquee"
            android:paddingBottom="@dimen/size5"
            android:paddingLeft="@dimen/size10"
            android:singleLine="true"
            android:text="@string/aed"
            android:textColor="@color/text_spiner"
            android:textSize="@dimen/size_text_15" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5">

            <com.grocery.common.CustomTextView
                android:id="@+id/tvMissingProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/size5"
                android:layout_toLeftOf="@+id/btn_view_item_new_order"
                android:ellipsize="marquee"
                android:paddingLeft="@dimen/size10"
                android:singleLine="true"
                android:text="@string/missing_product"
                android:textColor="@color/text_spiner"
                android:textSize="@dimen/size_text_15" />

            <LinearLayout
                android:id="@+id/btn_view"
                android:layout_width="@dimen/size80"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="@dimen/size10"
                android:layout_marginTop="@dimen/size10"
                android:orientation="horizontal">

                <include layout="@layout/button_view" />

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>